Последние доработки: кроссбраузерность и прочее

--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -110,6 +110,7 @@
   .download-app__block {
     background-color: transparent;
     order: -1;
+    z-index: 1;
   }
 
   .download-app__wrapper {
