--- a/source/less/blocks/upload.less
+++ b/source/less/blocks/upload.less
@@ -48,6 +48,10 @@
   }
 }
 
+.upload__filter--active {
+  fill: @pink;
+}
+
 .upload__filter--crop {
   width: 44px;
   height: 54px;
@@ -178,6 +182,7 @@
   .upload__filter {
     transform: scale(0.5);
     height: 70px;
+    fill: @pink;
   }
 
   .upload__scale {
