Добавила фоновый цвет для блока с картой

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -64,6 +64,7 @@
   height: 200px;
   margin: 0 auto;
   position: relative;
+  background-color: #f4f1ea;
   background-image: url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: bottom center;
