--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -88,23 +88,25 @@
 
 @media (min-width: @tablet-width) {
   .download-app {
+    position: relative;
     width: 660px;
-    height: 618px;
+    min-height: 618px;
     margin: 0 auto;
     display: flex;
     overflow: hidden;
   }
 
   .download-app__phone {
-    position: relative;
+    position: absolute;
     width: 700px;
     flex-shrink: 0;
+    bottom: 0;
+    left: -20px;
   }
 
   .download-app__phone-image {
     position: absolute;
     bottom: 0;
-    right: 360px;
   }
 
   .download-app__block {
@@ -155,10 +157,7 @@
 
   .download-app__phone {
     width: 1050px;
-  }
-
-  .download-app__phone-image {
-    right: 284px;
+    left: 26px;
   }
 
   .download-app__wrapper {
