--- a/source/less/blocks/social__list.less
+++ b/source/less/blocks/social__list.less
@@ -7,6 +7,7 @@
   margin: 36px 0 39px;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
